# bluey

./: .gitignore  README  README.md  README2.md  environment.yml  main.py  model.py  pyproject.toml  requirements.txt  run_jobs.ipynb  tests.py  training.py
config_types/: config_types.py
loadtypes/: config_types.py
model/: model.py
optimizers/: manifold_muonW.py  msign.py  muonW1.py
scripts/: dataset.py  generate_configs.py  generate_sweep.py  make_x_and_w.py  monitors.py  run_job.sh  run_jobs.sh  sweep.py  training.py  training_script.py
tests/: test_dataset.py  test_training.py  test_wandb.py  tests.py
types/: config_types.py
wandb/: latest-run
wandb/run-20251107_140205-geq8nmnz/: run-geq8nmnz.wandb
wandb/run-20251107_140205-geq8nmnz/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251107_140333-g105tzdw/: run-g105tzdw.wandb
wandb/run-20251107_140538-xc6y4fkh/: run-xc6y4fkh.wandb
wandb/run-20251107_140556-r5oqyeb6/: run-r5oqyeb6.wandb
wandb/run-20251107_140556-r5oqyeb6/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
