
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluey"
version = "0.1.0"
description = "eecs182 final project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.1",
    "wandb>=0.19.0",
    "numpy>=1.26.4",
    #"torch-xla",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model*", "scripts*", "optimizers*", "types*"]
exclude = ["wandb*", "checkpoints*", "jobs*", "logs*"]

